# copybrainapp

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  content_type.rs  lib.rs  models.rs
src/components/: calendar-view.tsx  clipboard-card.tsx  day-detail-dialog.tsx  item-detail-dialog.tsx  search-bar.tsx  settings-dialog.tsx  shortcuts-dialog.tsx  sidebar.tsx  theme-toggle.tsx  timeline-list.tsx
src/hooks/: use-clipboard-data.ts  use-theme.ts
src/lib/: tauri.ts
src/store/: theme-store.ts  ui-store.ts
