[package]
name = "copybrain"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "copybrain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.6.1"
chrono = { version = "0.4.45", features = ["serde"] }
regex = "1.13.1"
once_cell = "1.21.4"
uuid = { version = "1.24.0", features = ["v4"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.7.1"

